# sentinel

./: .gitignore  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
resources/seccomp/: x86_64-unknown-linux-gnu.json
scripts/: build_c_image.sh  build_python_image.sh  build_ruby_image.sh
src/arch/: Cargo.toml
src/arch/src/: context.rs  feature_set.rs  lib.rs  signal.rs  stack.rs
src/auth/: Cargo.toml
src/auth/src/: capability_set.rs  credentials.rs  id.rs  lib.rs  user_namespace.rs
src/dev/: Cargo.toml
src/dev/src/: lib.rs
src/fs/: Cargo.toml
src/fs/src/: attr.rs  context.rs  dentry.rs  dirent.rs  fd_flags.rs  file.rs  file_operations.rs  file_test_utils.rs  inode.rs  inode_operations.rs  lib.rs  mount.rs  offset.rs  seek.rs  socket.rs  utils.rs
src/fs/src/dev/: mod.rs  null.rs
src/fs/src/fsutils/: host_file_mapper.rs  inode.rs  inode_cached.rs  mod.rs
src/fs/src/host/: dir.rs  mod.rs  regular.rs  symlink.rs
src/fs/src/tmpfs/: mod.rs  regular.rs
src/limit/: Cargo.toml
src/limit/src/: lib.rs
src/linux/: Cargo.toml
src/linux/src/: aio.rs  capability.rs  dev.rs  elf.rs  file.rs  fs.rs  futex.rs  ioctl.rs  lib.rs  limit.rs  mm.rs  net.rs  poll.rs  prctl.rs  signal.rs  time.rs
src/logger/: Cargo.toml
src/logger/src/: lib.rs
src/mem/: Cargo.toml
src/mem/src/: access_type.rs  addr.rs  addr_range_seq.rs  block.rs  block_seq.rs  bytes_io.rs  context.rs  io.rs  lib.rs
src/memmap/: Cargo.toml
src/memmap/src/: context.rs  file.rs  invalidate.rs  lib.rs  mappable.rs  mapping_set.rs  mmap_opts.rs
src/net/: Cargo.toml
src/net/src/: context.rs  lib.rs  tcp.rs  udp.rs  utils.rs
src/pgalloc/: Cargo.toml
src/pgalloc/src/: context.rs  lib.rs
src/platform/: Cargo.toml  build.rs
src/platform/src/: child_stub.s  context.rs  lib.rs
src/seccompiler/: Cargo.toml  README.md
src/seccompiler/src/: seccompiler_bin.rs
src/segment/: Cargo.toml
src/segment/src/: lib.rs
src/sentinel/: Cargo.toml  build.rs
src/sentinel/src/: capabilities.rs  lib.rs  main.rs  oci.rs
src/sentinel/src/context/: mod.rs
src/sentinel/src/kernel/: epoll.rs  eventfd.rs  fd_table.rs  mod.rs  pipe.rs  task.rs  task_image.rs  uts_namespace.rs
src/sentinel/src/loader/: mod.rs
src/sentinel/src/mm/: memory_manager.rs  mod.rs
src/sentinel/src/syscalls/: mod.rs  sys_epoll.rs  sys_eventfd.rs  sys_file.rs  sys_fscontext.rs  sys_futex.rs  sys_getdents.rs  sys_identity.rs  sys_lseek.rs  sys_mempolicy.rs  sys_mmap.rs  sys_pipe.rs  sys_poll.rs  sys_prctl.rs  sys_random.rs  sys_read.rs  sys_rlimit.rs  sys_rseq.rs  sys_signal.rs  sys_socket.rs  sys_stat.rs  sys_sysinfo.rs  sys_thread.rs  sys_thread_local_storage.rs  sys_time.rs  sys_timer.rs  sys_utsname.rs  sys_write.rs
src/sentinel_oci/: Cargo.toml
src/sentinel_oci/src/: lib.rs
src/time/: Cargo.toml
src/time/src/: lib.rs
src/usage/: Cargo.toml
src/usage/src/: lib.rs  memory.rs
src/utils/: Cargo.toml
src/utils/src/: arg_parser.rs  bit.rs  env.rs  lib.rs  mem.rs  range.rs  sys_error.rs  user_regs_struct.rs
tests/: Dockerfile.c  Dockerfile.python  Dockerfile.ruby  main_test.py
tests/app/c/: echo.c  open.c
tests/app/python/: cv2_decode_image.py  echo_server.py  edge_detection.py  edge_detection_multithread.py  gen_thumbnail_from_url.py  hello_world.py  matmul.py  matmul_multithread.py  mobilenet_tflite.py  mobilenet_tflite_multithread.py
tests/app/ruby/: Gemfile  hello.rb  parse_json.rb  test.json
