[package]
name = "arch"
version = "0.1.0"
authors = ["Joe Hattori <joe2ninja21@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.124"
rand = "0.8.4"

limit = { path = "../limit" }
logger = { path = "../logger" }
mem = { path = "../mem" }
utils = { path = "../utils" }
