[package]
name = "fs"
version = "0.1.0"
authors = ["Joe Hattori <joe2ninja21@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.47"
docker-api = "0.8"
libc = "0.2.124"
libcgroups = { git = "https://github.com/containers/Youki.git" }
libcontainer = { git = "https://github.com/containers/Youki.git" }
nix = "0.25.0"
oci-spec = { version = "0.5.8", features = ["runtime"] }
once_cell = "1.8.0"
smoltcp = "0.8.1"
tokio = "1.15"

auth = { path = "../auth" }
dev = { path = "../dev" }
limit = { path = "../limit" }
linux = { path = "../linux" }
logger = { path = "../logger" }
mem = { path = "../mem" }
memmap = { path = "../memmap" }
net = { path = "../net" }
pgalloc = { path = "../pgalloc" }
time = { path = "../time" }
segment = { path = "../segment" }
sentinel_oci = { path = "../sentinel_oci" }
usage = { path = "../usage" }
utils = { path = "../utils" }
