[package]
name = "mem"
version = "0.1.0"
authors = ["Joe Hattori <joe2ninja21@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goblin = "0.4.3"
libc = "0.2.124"

logger = { path = "../logger" }
utils = { path = "../utils" }

[dev-dependencies]
once_cell = "1.8.0"
