[package]
name = "memmap"
version = "0.1.0"
authors = ["Joe Hattori <joe2ninja21@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mem = { path = "../mem" }
segment = { path = "../segment" }
utils = { path = "../utils" }
