[package]
name = "net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.124"
once_cell = "1.8.0"
smoltcp = "0.8.1"

dev = { path = "../dev" }
linux = { path = "../linux" }
logger = { path = "../logger" }
mem = { path = "../mem" }
memmap = { path = "../memmap" }
utils = { path = "../utils" }
