[package]
name = "pgalloc"
version = "0.1.0"
authors = ["Joe Hattori <joe2ninja21@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.124"
nix = "0.25.0"

logger = { path = "../logger" }
mem = { path = "../mem" }
memmap = { path = "../memmap" }
segment = { path = "../segment" }
usage = { path = "../usage" }
utils = { path = "../utils" }
