[package]
name = "sentinel_oci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.47"
nix = "0.25.0"
oci-spec = { version = "0.5.8", features = ["runtime"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"

logger = { path = "../logger" }
utils = { path = "../utils" }
