[package]
name = "utils"
version = "0.1.0"
authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
libc = "0.2.124"
nix = "0.25.0"
num = "0.4.0"
serde = { version = ">=1.0.27", features = ["derive"] }
smoltcp = "0.8.0"

[dev-dependencies]
serde_json = ">=1.0.9"
